WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199971
REGRESSION(rUnknown): YouTube playback pauses when switching to a new tab
https://bugs.webkit.org/show_bug.cgi?id=199971
Summary
REGRESSION(rUnknown): YouTube playback pauses when switching to a new tab
Jer Noble
Reported
2019-07-19 15:59:17 PDT
REGRESSION(rUnknown): YouTube playback pauses when switching to a new tab
Attachments
Patch
(9.90 KB, patch)
2019-07-19 16:04 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(9.82 KB, patch)
2019-07-19 16:20 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(9.85 KB, patch)
2019-07-22 11:17 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2019-07-19 16:00:27 PDT
<
rdar://problem/51951218
>
Jer Noble
Comment 2
2019-07-19 16:04:37 PDT
Created
attachment 374516
[details]
Patch
Alex Christensen
Comment 3
2019-07-19 16:11:31 PDT
Comment on
attachment 374516
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=374516&action=review
> Tools/TestWebKitAPI/Tests/WebKitCocoa/NoPauseWhenSwitchingTabs.mm:28 > +#if PLATFORM(IOS_FAMILY)
If this works on Mac, let's increase our coverage.
> Tools/TestWebKitAPI/Tests/WebKitCocoa/NoPauseWhenSwitchingTabs.mm:44 > + RetainPtr<WKWebViewConfiguration> configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
auto
> Tools/TestWebKitAPI/Tests/WebKitCocoa/NoPauseWhenSwitchingTabs.mm:50 > + RetainPtr<TestWKWebView> webView = adoptNS([[TestWKWebView alloc] initWithFrame:NSMakeRect(0, 0, 300, 300) configuration:configuration.get() addToWindow:YES]);
auto
Jer Noble
Comment 4
2019-07-19 16:20:44 PDT
Created
attachment 374520
[details]
Patch
Jer Noble
Comment 5
2019-07-22 11:17:08 PDT
Created
attachment 374608
[details]
Patch
WebKit Commit Bot
Comment 6
2019-07-22 12:38:11 PDT
Comment on
attachment 374608
[details]
Patch Clearing flags on attachment: 374608 Committed
r247695
: <
https://trac.webkit.org/changeset/247695
>
WebKit Commit Bot
Comment 7
2019-07-22 12:38:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug